--- a/RhinoMobile.Touch.csproj
+++ b/RhinoMobile.Touch.csproj
@@ -733,6 +733,7 @@
     <Compile Include="Model\MeshPreparationEvents.cs" />
     <Compile Include="Display\RhGLFramebufferObject.cs" />
     <Compile Include="Display\ClippingPlanes.cs" />
+    <Compile Include="Display\ColorExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Libraries\README.md" />
