Add FastDrawing switch to ES2Renderer
Minor changes to ViewportInfoExtensions.  Removed 0414 warnings from
DEBUG modes.

--- a/RhinoMobile.Touch.csproj
+++ b/RhinoMobile.Touch.csproj
@@ -22,7 +22,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <additionalargs>-unsafe</additionalargs>
-    <NoWarn>0618 0219</NoWarn>
+    <NoWarn>0618 0219 0414</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
