Optimizations to Materials and Shaders
We now have a runtime material - DisplayMaterial - that is a property
of the DisplayMesh.  Additionally, we don’t assign a new material to
the Shader if the previous material was the same.  This should speed up
instance rendering.

--- a/RhinoMobile.Droid.csproj
+++ b/RhinoMobile.Droid.csproj
@@ -742,6 +742,7 @@
     <Compile Include="..\rhinocommon\dotnet\rhino\rhinosdkviewport.cs">
       <Link>rhinocommon\dotnet\rhino\rhinosdkviewport.cs</Link>
     </Compile>
+    <Compile Include="Display\DisplayMaterial.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
