RhinoMobile.iOS building successfully with iOS 9 SDK and Xamarin.iOS

--- a/RhinoMobile.iOS.csproj
+++ b/RhinoMobile.iOS.csproj
@@ -752,4 +752,9 @@
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ObjcBindingNativeLibrary Include="..\rhinocommon\c\build\Release-ios\libopennurbs.a">
+      <Link>libopennurbs.a</Link>
+    </ObjcBindingNativeLibrary>
+  </ItemGroup>
 </Project>
