--- a/RhinoMobile.Droid.csproj
+++ b/RhinoMobile.Droid.csproj
@@ -747,7 +747,7 @@
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ItemGroup />
   <ItemGroup>
     <EmbeddedNativeLibrary Include="..\rhinocommon\c\build\Release-android\libs\armeabi\libopennurbs.so">
