--- a/RhinoMobile.Touch.csproj
+++ b/RhinoMobile.Touch.csproj
@@ -23,8 +23,17 @@
     <NoWarn>0219;0414</NoWarn>
     <CustomCommands>
       <CustomCommands>
-        <Command type="BeforeBuild" command="${ProjectDir}/../rhinocommon/c/build_native.py -p ios -v" workingdir="${ProjectDir}/../rhinocommon/c/" />
-        <Command type="Custom" name="Build libopennurbs.a" command="${ProjectDir}/../rhinocommon/c/build_native.py -p ios -v" workingdir="${ProjectDir}/../rhinocommon/c/" />
+        <Command>
+          <type>BeforeBuild</type>
+          <command>${ProjectDir}/../rhinocommon/c/build_native.py -p ios -v</command>
+          <workingdir>${ProjectDir}/../rhinocommon/c/</workingdir>
+        </Command>
+        <Command>
+          <type>Custom</type>
+          <name>Build libopennurbs.a</name>
+          <command>${ProjectDir}/../rhinocommon/c/build_native.py -p ios -v</command>
+          <workingdir>${ProjectDir}/../rhinocommon/c/</workingdir>
+        </Command>
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
@@ -39,7 +48,11 @@
     <DefineConstants>OPENNURBS_SDK;MONO_BUILD;__MONOTOUCH__;MOBILE_BUILD</DefineConstants>
     <CustomCommands>
       <CustomCommands>
-        <Command type="BeforeBuild" command="${ProjectDir}/../rhinocommon/c/build_native.py -p ios -v" workingdir="${ProjectDir}/../rhinocommon/c/" />
+        <Command>
+          <type>BeforeBuild</type>
+          <command>${ProjectDir}/../rhinocommon/c/build_native.py -p ios -v</command>
+          <workingdir>${ProjectDir}/../rhinocommon/c/</workingdir>
+        </Command>
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
