--- a/RhinoMobile.iOS.csproj
+++ b/RhinoMobile.iOS.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>RhinoMobile.iOS</AssemblyName>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
+    <ReleaseVersion>1.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
