--- a/RhinoMobile.iOS.csproj
+++ b/RhinoMobile.iOS.csproj
@@ -9,6 +9,9 @@
     <RootNamespace>RhinoMobile.iOS</RootNamespace>
     <AssemblyName>RhinoMobile.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ReleaseVersion>6.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,8 +48,11 @@
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
     <Reference Include="OpenTK-1.0" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="Rhino3dmIO.iOS">
-      <HintPath>..\rhino\src4\DotNetSDK\rhinocommon\dotnet\bin\Debug\Rhino3dmIO.iOS.dll</HintPath>
+      <HintPath>packages\Rhino3dmIO.iOS.6.0.17363.3261-dujour\lib\Xamarin.iOS\Rhino3dmIO.iOS.dll</HintPath>
     </Reference>
   </ItemGroup>
 <ItemGroup>
@@ -72,6 +78,9 @@
     <Compile Include="Model\RMModel.cs" />
     <Compile Include="Display\DisplayMaterial.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
