--- a/RhinoMobile.iOS.csproj
+++ b/RhinoMobile.iOS.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net.Http" />
     <Reference Include="Rhino3dmIO.iOS">
-      <HintPath>packages\Rhino3dmIO.iOS.6.0.17363.3261-dujour\lib\Xamarin.iOS\Rhino3dmIO.iOS.dll</HintPath>
+      <HintPath>..\RVCrossPlatform\packages\Rhino3dmIO.iOS.6.3.18090.471\lib\Xamarin.iOS\Rhino3dmIO.iOS.dll</HintPath>
     </Reference>
   </ItemGroup>
 <ItemGroup>
